# goit-pythonweb-hw-06

./: .env  README.md  alembic.ini  connect.py  models.py  my_select.py  pyproject.toml  reset.py  seed.py  test_select.py
migrations/: env.py
migrations/versions/: 90a2b68b90e8_initial.py
